<resources>
    <string name="app_name">Next2Me</string>
    <string name="qual_il_tuo_nome">Qual è il tuo nome ?</string>
    <string name="inserisci_qui_il_tuo_nome">Inserisci qui il tuo vero nome oppure un tuo soprannome</string>
    <string name="continua">continua</string>
    <string name="uomini">uomini</string>
    <string name="donne">donne</string>
    <string name="facebook_app_id">476834663592284</string>
    <string name="fb_login_protocol_scheme">fb476834663592284</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qual_la_tua_eta">Quando sei nato ?</string>
    <string name="nome">Nome</string>
    <string name="qual_la_tua_data_di_nascita">qual è la tua notification di nascita</string>
    <string name="desideri_incontrare">desideri incontrare...</string>
    <string name="sei">Sei ...</string>
    <string name="bottonefemmina">bottoneFemmina</string>
    <string name="bottonemaschio">bottoneMaschio</string>
    <string name="fotocamera">fotocamera</string>
    <string name="galleria">galleria</string>
    <string name="profilepic">profilePic</string>
    <string name="parlaci_di_te_sappiamo_che_sei_una_persona_interessante">parlaci di te, sappiamo che sei una persona interessante! :)</string>
    <string name="descrizione">Descrizione</string>
    <string name="parlaci_di_te">Parlaci di te</string>
    <string name="sappiamo_che_sei_una_persona_interessante">sappiamo che sei una persona interessante</string>
    <string name="description">description</string>
    <string name="preferences">preferences</string>
    <string name="gender">gender</string>
    <string name="birthdate">birthdate</string>
    <string name="surname">surname</string>
    <string name="name">name</string>
    <string name="mail">mail</string>
    <string name="title_activity_maps">Map</string>
    <string name="janet_john">janet John</string>
    <string name="vai_alla_mappa">vai alla mappa</string>
    <string name="ora_facci_vedere_chi_sei">Ora facci vedere chi sei !</string>
    <string name="message_hint">Enter your message</string>
    <string name="Enter_your_message_here">Enter your message here</string>
    <string name="button">Button</string>
    <string name="attivata_condivisione_della_posizione">Attivata condivisione della posizione</string>
    <string name="disattivata_condivisione_della_posizione">Disattivata condivisione della posizione</string>

</resources>