<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context=".RegistrationActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="348dp"
        android:layout_height="54dp"
        android:background="@color/black"
        android:backgroundTint="#FAEE9D"
        android:hint="@string/nome"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="?attr/colorControlNormal"
        app:boxBackgroundColor="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintVertical_bias="0.46" />

    <TextView
        android:layout_marginTop="75dp"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qual_il_tuo_nome"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="338dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/inserisci_qui_il_tuo_nome"
        android:textColor="#252323"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/buttonContinua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/buttonContinua"
        android:layout_width="186dp"
        android:layout_height="57dp"
        android:layout_marginBottom="100dp"
        android:text="@string/continua"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"/>


</androidx.constraintlayout.widget.ConstraintLayout>