<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="horizontal|vertical"
    tools:context=".ThirdActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/uomini"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="24dp"
        android:text="@string/uomini"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/donne"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/donne"
        android:layout_width="332dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="160dp"
        android:text="@string/donne"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="28dp"
        android:text="@string/desideri_incontrare"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/uomini"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/buttonMale"
        android:layout_width="131dp"
        android:layout_height="131dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="144dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/male" />

    <ImageButton
        android:id="@+id/buttonFemale"
        android:layout_width="131dp"
        android:layout_height="131dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="144dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/female" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="68dp"
        android:text="@string/sei"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonContinua"
        android:layout_width="186dp"
        android:layout_height="57dp"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="48dp"
        android:text="Continua"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>