<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:backgroundTint="#D7E3C280"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/description"
        android:layout_width="333dp"
        android:layout_height="134dp"
        android:background="#FAEE9D"
        android:hint="@string/descrizione"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/parlaciDiTe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.455" />

    <TextView
        android:layout_marginTop="80dp"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Parlaci un pò di te.."
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />

    <TextView
        android:id="@+id/parlaciDiTe"
        android:layout_width="338dp"
        android:layout_height="45dp"
        android:text="@string/sappiamo_che_sei_una_persona_interessante"
        android:textColor="#2E2C2C"
        android:textSize="18sp"
        android:textStyle="italic"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonContinua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.392" />

    <Button
        android:id="@+id/buttonContinua"
        android:layout_width="186dp"
        android:layout_height="57dp"
        android:text="@string/continua"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parlaciDiTe" />


</androidx.constraintlayout.widget.ConstraintLayout>